--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "test:chrome": "npx playwright test --headed --project=chromium",
     "test:firefox": "npx playwright test --headed --project=firefox",
     "test:safari": "npx playwright test --headed --project=webkit",
-    "lint": "npx eslint --ext js ./src",
-    "lint:fix": "npx eslint --ext ts ./src --fix",
+    "lint": "npx eslint \"{src,test}/**/*.ts\" --fix",
+    "lint:fix": "npx eslint \"{src,test}/**/*.ts\" --fix",
     "dev": "vite --host",
     "build": "vite build",
     "preview": "vite preview",
