--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "prepare": "husky"
   },
   "devDependencies": {
-    "axios": "^1.7.2",
     "@builder.io/partytown": "^0.10.2",
     "@commitlint/cli": "^19.3.0",
     "@commitlint/config-conventional": "^19.2.2",
@@ -25,6 +24,8 @@
     "@total-typescript/ts-reset": "^0.5.1",
     "@vitejs/plugin-legacy": "^5.4.0",
     "autoprefixer": "^10.4.19",
+    "axios": "^1.7.2",
+    "clsx": "^2.1.1",
     "cssnano": "^7.0.1",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
